# system_tp_duts3

./: README.md  mkTP.sh
Hauspie/: Makefile.m4101c  Séance 5.odt
Hauspie/public/: asr4
Hauspie/public/baselib/: Makefile.in  Makefile.vars  _start.c
Hauspie/public/baselib/sample/: Makefile  main.c  main.c~  peripherals.h
Hauspie/public/codewar/: asm.tgz
Hauspie/public/codewar/asm/: copy_fill.asm  copy_self.asm  fill_all.asm  filler.asm  push_pc.asm  test_add_sub.asm  test_jumps.asm  (+4 more)
Hauspie/public/codewar/assembler/: CMakeLists.txt  full_test.asm  test.asm  test2.asm
Hauspie/public/codewar/assembler/src/: assembler.cpp  assembler.h  config.h  instructions.cpp  instructions.h  label.cpp  label.h  main.cpp
Hauspie/public/m3101/: test  test_bmp.sh  test_bmp2.sh
Hauspie/public/opengl/: skel.c
tp1/: Makefile  Makefile Non generique  Rep_tp1  generique  tp1  tp1_1  tp1_1.c  tp1_2.c  tp1_2.h  tp1_3.c  tp1_3.h
tp2/: lance  main.c  structure.c  structure.h  tab_int.c  tab_int.h
tp3/: Makefile  lance  main.c  string2.c  string2.h
tp4/: Makefile  chaines  main.c  test  tp4.c  tp4.h
tp4/save/: testassave.txt
tp5/: lance  tp5.c  tp5.h  wordCount.c
tp5/rememo/: Makefile  lance  test.txt  toto.txt  tp5.c  tp5.h  wordCount.c
tp6/: Makefile  bmp  lance  main.c  tp6.c  tp6.h  tp62.c
tp8/: Makefile  README.md  iutsh  iutsh.c  iutsh.h
tp9/: README.md  iutsh  iutsh.c  iutsh1  iutsh2  main.c
tp9/.backuptp8/: iutsh  iutsh.c  iutsh.h
tpcontrol/: Makefile  barbetf.c  barbetf.h  lance  main.c
tpcontrolerev/: Makefile  README.md  barbetf.c  lance  tmp
(+9 files in other folders)
